# kimai-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml
src/: config.rs  main.rs
