[package]
name = "kimai-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
inquire = { version = "0.7.5", features = ["date"] }
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
ureq = { version = "2.10.0", features = ["json"] }
